unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Agreed_By__c.field-meta.xml
<CustomField>
    <fullName>Agreed_By__c</fullName>
    <label>Agreed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>