unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Agreed_Price__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Price__c</fullName>
    <label>Agreed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>