unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Calculated_Charge__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Charge__c</fullName>
    <description>Calculated Charge to customer</description>
    <formula>IF( Chargeable__c = true ,  Sell__c -  Discount__c ,(100-Discount__c )*Sell__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>