unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this to be charged to the customer?</description>
    <label>Chargeable</label>
    <type>Checkbox</type>
</CustomField>