unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Total amount excluding VAT</description>
    <inlineHelpText>Enter the total amount excluding VAT</inlineHelpText>
    <label>Cost (Excluding VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>