unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Created_By_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Profile_Name__c</fullName>
    <description>For use in Flow: FL Update CandCs with PO Value - Aspect or Engineer  -  otherwise it would mean looking up each POLIs Created by, Profile Name - within a Loop, which would impact SOQL limits</description>
    <formula>CreatedBy.Profile_Name__c</formula>
    <inlineHelpText>The Profile Name of the User who created this Purchase Order Line Item</inlineHelpText>
    <label>Created By Profile Name</label>
    <type>Text</type>
</CustomField>