unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>This is the total amount to be discounted from the Purchase Order</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>