unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Extended_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_Description__c</fullName>
    <description>Extended Description - the items to be ordered or an order/quote number</description>
    <label>Extended Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>