unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>From Date/Time for the Sub Contractor</description>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>