unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Job_Specification__c.field-meta.xml
<CustomField>
    <fullName>Job_Specification__c</fullName>
    <label>Job Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>