unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the related Product raised against the Purchase Order Line Item</description>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>