unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>This is the description of the Purchase Order Line Item</description>
    <label>Product Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>