unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Purchase_Order_Line_Amount_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Amount_Excl_VAT__c</fullName>
    <description>This is the summation of the Product(Quantity X Price)</description>
    <formula>Quantity__c *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Line Amount (Excl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>