unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Purchase_Order_Line_Amount_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Amount_Incl_VAT__c</fullName>
    <description>Total without VAT with the appropriate VAT added</description>
    <formula>Purchase_Order_Line_Amount_Excl_VAT__c +  VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Line Amount (Incl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>