unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Sell__c.field-meta.xml
<CustomField>
    <fullName>Sell__c</fullName>
    <description>Markup to Customer</description>
    <formula>1.6 *   Purchase_Order_Line_Amount_Excl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>