unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>To Date/Time for the Sub Contractor</description>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>