unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>This is the unit of measurement for the Product</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>