unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>This is the summation of the Product(Quantity X Price)</description>
    <formula>Quantity__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>