unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <description>Amount of VAT on the Purchase Order Line Items</description>
    <formula>Purchase_Order_Line_Amount_Excl_VAT__c*VAT_Rate_hidden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>