unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>VAT_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be a lookup field to the VAT rates object</description>
    <label>VAT Code</label>
    <referenceTo>VAT_Rate__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>