unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <formula>VAT_Code__r.VAT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>