unpackaged/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_Rate_hidden__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate_hidden__c</fullName>
    <description>VAT Rate to be used in calculations</description>
    <label>VAT Rate (hidden)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>